added dynamic functionality in project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div id="text_container">
-            <p id="ref_para">Skilled managers frequently evaluate diverse strategies to ensure maximum efficiency across various departments. When unexpected glitches arise, experienced teams swiftly implement backup plans without jeopardizing overall progress. Zeal and precision remain essential to sustaining long-term success.</p>
+            <p id="ref_para"></p>
             <textarea name="" id="text_area" placeholder="Enter the text" autocomplete="false"></textarea>
         </div>
         
